feat(dim): add dim config

--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -194,6 +194,44 @@ spec:
               value: "{{ .Values.sdfactoryAddress }}{{ .Values.backend.processesworker.sdfactory.selfdescriptionPath }}"
             - name: "APPLICATIONCHECKLIST__SDFACTORY__USERNAME"
               value: "{{ .Values.backend.placeholder }}"
+            - name: "APPLICATIONCHECKLIST__DIM__USERNAME"
+              value: "{{ .Values.backend.placeholder }}"
+            - name: "APPLICATIONCHECKLIST__DIM__PASSWORD"
+              value: "{{ .Values.backend.placeholder }}"
+            - name: "APPLICATIONCHECKLIST__DIM__CLIENTID"
+              value: "{{ .Values.backend.processesworker.dim.clientId }}"
+            - name: "APPLICATIONCHECKLIST__DIM__GRANTTYPE"
+              value: "{{ .Values.backend.processesworker.dim.grantType }}"
+            - name: "APPLICATIONCHECKLIST__DIM__CLIENTSECRET"
+              valueFrom:
+                secretKeyRef:
+                  name: "{{ .Values.backend.interfaces.secret }}"
+                  key: "dim-client-secret"
+            - name: "APPLICATIONCHECKLIST__DIM__SCOPE"
+              value: "{{ .Values.backend.processesworker.dim.scope }}"
+            - name: "APPLICATIONCHECKLIST__DIM__TOKENADDRESS"
+              value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.tokenPath }}"
+            - name: "APPLICATIONCHECKLIST__DIM__BASEADDRESS"
+              value: "{{ .Values.backend.processesworker.dim.baseAddress }}"
+            - name: "APPLICATIONCHECKLIST__DIM__UNIVERSALRESOLVERADDRESS"
+              value: "{{ .Values.backend.processesworker.dim.universalResolverAddress }}"
+            - name: "APPLICATIONCHECKLIST__DIM__DIDDOCUMENTBASELOCATION"
+              value: "{{ .Values.backend.processesworker.dim.didDocumentBaseLocation }}"
+            - name: "APPLICATIONCHECKLIST__DIM__MAXVALIDATIONTIMEINDAYS"
+              value: "{{ .Values.backend.processesworker.dim.maxValidationTimeInDays }}"
+            - name: "APPLICATIONCHECKLIST__DIM__ENCRYPTIONCONFIGINDEX"
+              value: "{{ .Values.backend.processesworker.dim.encryptionConfigIndex }}"
+            - name: "APPLICATIONCHECKLIST__DIM__ENCRYPTIONMODECONFIGS__0__INDEX"
+              value: "{{ .Values.backend.processesworker.dim.encryptionConfigs.index0.index }}"
+            - name: "APPLICATIONCHECKLIST__DIM__ENCRYPTIONMODECONFIGS__0__ENCRYPTIONKEY"
+              valueFrom:
+                secretKeyRef:
+                  name: "{{ .Values.backend.interfaces.secret }}"
+                  key: "dim-encryption-key0"
+            - name: "APPLICATIONCHECKLIST__DIM__ENCRYPTIONMODECONFIGS__0__CIPHERMODE"
+              value: "{{ .Values.backend.processesworker.dim.encryptionConfigs.index0.cipherMode }}"
+            - name: "APPLICATIONCHECKLIST__DIM__ENCRYPTIONMODECONFIGS__0__PADDINGMODE"
+              value: "{{ .Values.backend.processesworker.dim.encryptionConfigs.index0.paddingMode }}"
             - name: "KEYCLOAK__CENTRAL__AUTHREALM"
               value: "{{ .Values.backend.keycloak.central.authRealm }}"
             - name: "KEYCLOAK__CENTRAL__CLIENTID"
@@ -342,7 +380,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.backend.interfaces.secret }}"
-                  key: "process-onboardingserviceprovider-encryption-key0"
+                  key: "onboardingserviceprovider-encryption-key0"
             - name: "ONBOARDINGSERVICEPROVIDER__ENCRYPTIONCONFIGS__1__INDEX"
               value: "{{ .Values.backend.processesworker.onboardingServiceProvider.encryptionConfigs.index1.index}}"
             - name: "ONBOARDINGSERVICEPROVIDER__ENCRYPTIONCONFIGS__1__CIPHERMODE"
