--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -185,6 +185,44 @@ spec:
           value: "{{ .Values.sdfactoryAddress }}{{ .Values.backend.processesworker.sdfactory.selfdescriptionPath }}"
         - name: "APPLICATIONCHECKLIST__SDFACTORY__USERNAME"
           value: "{{ .Values.backend.placeholder }}"
+        - name: "APPLICATIONCHECKLIST__DIM__USERNAME"
+          value: "{{ .Values.backend.placeholder }}"
+        - name: "APPLICATIONCHECKLIST__DIM__PASSWORD"
+          value: "{{ .Values.backend.placeholder }}"
+        - name: "APPLICATIONCHECKLIST__DIM__CLIENTID"
+          value: "{{ .Values.backend.processesworker.dim.clientId }}"
+        - name: "APPLICATIONCHECKLIST__DIM__GRANTTYPE"
+          value: "{{ .Values.backend.processesworker.dim.grantType }}"
+        - name: "APPLICATIONCHECKLIST__DIM__CLIENTSECRET"
+          valueFrom:
+            secretKeyRef:
+              name: "{{ .Values.backend.interfaces.secret }}"
+              key: "dim-client-secret"
+        - name: "APPLICATIONCHECKLIST__DIM__SCOPE"
+          value: "{{ .Values.backend.processesworker.dim.scope }}"
+        - name: "APPLICATIONCHECKLIST__DIM__TOKENADDRESS"
+          value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.tokenPath }}"
+        - name: "APPLICATIONCHECKLIST__DIM__BASEADDRESS"
+          value: "{{ .Values.backend.processesworker.dim.baseAddress }}"
+        - name: "APPLICATIONCHECKLIST__DIM__UNIVERSALRESOLVERADDRESS"
+          value: "{{ .Values.backend.processesworker.dim.universalResolverAddress }}"
+        - name: "APPLICATIONCHECKLIST__DIM__DIDDOCUMENTBASELOCATION"
+          value: "{{ .Values.backend.processesworker.dim.didDocumentBaseLocation }}"
+        - name: "APPLICATIONCHECKLIST__DIM__MAXVALIDATIONTIMEINDAYS"
+          value: "{{ .Values.backend.processesworker.dim.maxValidationTimeInDays }}"
+        - name: "APPLICATIONCHECKLIST__DIM__ENCRYPTIONCONFIGINDEX"
+          value: "{{ .Values.backend.processesworker.dim.encryptionConfigIndex }}"
+        - name: "APPLICATIONCHECKLIST__DIM__ENCRYPTIONMODECONFIGS__0__INDEX"
+          value: "{{ .Values.backend.processesworker.dim.encryptionConfigs.index0.index }}"
+        - name: "APPLICATIONCHECKLIST__DIM__ENCRYPTIONMODECONFIGS__0__ENCRYPTIONKEY"
+          valueFrom:
+            secretKeyRef:
+              name: "{{ .Values.backend.interfaces.secret }}"
+              key: "dim-encryption-key0"
+        - name: "APPLICATIONCHECKLIST__DIM__ENCRYPTIONMODECONFIGS__0__CIPHERMODE"
+          value: "{{ .Values.backend.processesworker.dim.encryptionConfigs.index0.cipherMode }}"
+        - name: "APPLICATIONCHECKLIST__DIM__ENCRYPTIONMODECONFIGS__0__PADDINGMODE"
+          value: "{{ .Values.backend.processesworker.dim.encryptionConfigs.index0.paddingMode }}"
         - name: "COMPANYDATA__USECASEPARTICIPATIONMEDIATYPES__0"
           value: "{{ .Values.backend.administration.companyData.useCaseParticipationMediaTypes.type0 }}"
         - name: "COMPANYDATA__SSICERTIFICATEMEDIATYPES__0"
@@ -326,24 +364,24 @@ spec:
         - name: "NETWORK2NETWORK__BASEPORTALADDRESS"
           value: "{{ .Values.portalAddress }}{{ .Values.backend.portalHomePath }}"
         - name: "ONBOARDINGSERVICEPROVIDER__ENCRYPTIONCONFIG__INDEX"
-          value: "{{ .Values.backend.administration.onboardingServiceProvider.encryptionConfigIndex }}"
+          value: "{{ .Values.backend.processesworker.onboardingServiceProvider.encryptionConfigIndex }}"
         - name: "ONBOARDINGSERVICEPROVIDER__ENCRYPTIONCONFIGS__0__INDEX"
-          value: "{{ .Values.backend.administration.onboardingServiceProvider.encryptionConfigs.index0.index}}"
+          value: "{{ .Values.backend.processesworker.onboardingServiceProvider.encryptionConfigs.index0.index}}"
         - name: "ONBOARDINGSERVICEPROVIDER__ENCRYPTIONCONFIGS__0__CIPHERMODE"
-          value: "{{ .Values.backend.administration.onboardingServiceProvider.encryptionConfigs.index0.cipherMode}}"
+          value: "{{ .Values.backend.processesworker.onboardingServiceProvider.encryptionConfigs.index0.cipherMode}}"
         - name: "ONBOARDINGSERVICEPROVIDER__ENCRYPTIONCONFIGS__0__PADDINGMODE"
-          value: "{{ .Values.backend.administration.onboardingServiceProvider.encryptionConfigs.index0.paddingMode}}"
+          value: "{{ .Values.backend.processesworker.onboardingServiceProvider.encryptionConfigs.index0.paddingMode}}"
         - name: "ONBOARDINGSERVICEPROVIDER__ENCRYPTIONCONFIGS__0__ENCRYPTIONKEY"
           valueFrom:
             secretKeyRef:
               name: "{{ .Values.backend.interfaces.secret }}"
               key: "onboardingserviceprovider-encryption-key0"
         - name: "ONBOARDINGSERVICEPROVIDER__ENCRYPTIONCONFIGS__1__INDEX"
-          value: "{{ .Values.backend.administration.onboardingServiceProvider.encryptionConfigs.index1.index}}"
+          value: "{{ .Values.backend.processesworker.onboardingServiceProvider.encryptionConfigs.index1.index}}"
         - name: "ONBOARDINGSERVICEPROVIDER__ENCRYPTIONCONFIGS__1__CIPHERMODE"
-          value: "{{ .Values.backend.administration.onboardingServiceProvider.encryptionConfigs.index1.cipherMode}}"
+          value: "{{ .Values.backend.processesworker.onboardingServiceProvider.encryptionConfigs.index1.cipherMode}}"
         - name: "ONBOARDINGSERVICEPROVIDER__ENCRYPTIONCONFIGS__1__PADDINGMODE"
-          value: "{{ .Values.backend.administration.onboardingServiceProvider.encryptionConfigs.index1.paddingMode}}"
+          value: "{{ .Values.backend.processesworker.onboardingServiceProvider.encryptionConfigs.index1.paddingMode}}"
         - name: "ONBOARDINGSERVICEPROVIDER__ENCRYPTIONCONFIGS__1__ENCRYPTIONKEY"
           valueFrom:
             secretKeyRef:
