--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -221,16 +221,16 @@ spec:
               value: "{{ .Values.backend.processesworker.dim.maxValidationTimeInDays }}"
             - name: "APPLICATIONCHECKLIST__DIM__ENCRYPTIONCONFIGINDEX"
               value: "{{ .Values.backend.processesworker.dim.encryptionConfigIndex }}"
-            - name: "APPLICATIONCHECKLIST__DIM__ENCRYPTIONMODECONFIGS__0__INDEX"
+            - name: "APPLICATIONCHECKLIST__DIM__ENCRYPTIONCONFIGS__0__INDEX"
               value: "{{ .Values.backend.processesworker.dim.encryptionConfigs.index0.index }}"
-            - name: "APPLICATIONCHECKLIST__DIM__ENCRYPTIONMODECONFIGS__0__ENCRYPTIONKEY"
+            - name: "APPLICATIONCHECKLIST__DIM__ENCRYPTIONCONFIGS__0__ENCRYPTIONKEY"
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.backend.interfaces.secret }}"
                   key: "dim-encryption-key0"
-            - name: "APPLICATIONCHECKLIST__DIM__ENCRYPTIONMODECONFIGS__0__CIPHERMODE"
+            - name: "APPLICATIONCHECKLIST__DIM__ENCRYPTIONCONFIGS__0__CIPHERMODE"
               value: "{{ .Values.backend.processesworker.dim.encryptionConfigs.index0.cipherMode }}"
-            - name: "APPLICATIONCHECKLIST__DIM__ENCRYPTIONMODECONFIGS__0__PADDINGMODE"
+            - name: "APPLICATIONCHECKLIST__DIM__ENCRYPTIONCONFIGS__0__PADDINGMODE"
               value: "{{ .Values.backend.processesworker.dim.encryptionConfigs.index0.paddingMode }}"
             - name: "KEYCLOAK__CENTRAL__AUTHREALM"
               value: "{{ .Values.backend.keycloak.central.authRealm }}"
@@ -372,7 +372,7 @@ spec:
               value: "{{ .Values.backend.placeholder }}"
             - name: "PROCESSIDENTITY__PROCESSUSERID"
               value: "{{ .Values.backend.processesworker.processIdentity.processUserId }}"
-            - name: "ONBOARDINGSERVICEPROVIDER__ENCRYPTIONCONFIG__ENCRYPTIONCONFIGINDEX"
+            - name: "ONBOARDINGSERVICEPROVIDER__ENCRYPTIONCONFIGINDEX"
               value: "{{ .Values.backend.processesworker.onboardingServiceProvider.encryptionConfigIndex }}"
             - name: "ONBOARDINGSERVICEPROVIDER__ENCRYPTIONCONFIGS__0__INDEX"
               value: "{{ .Values.backend.processesworker.onboardingServiceProvider.encryptionConfigs.index0.index}}"
@@ -399,18 +399,26 @@ spec:
             - name: "INVITATION__INVITEDUSERINITIALROLES__0__CLIENTID"
               value: "{{ .Values.backend.clients.registration }}"
             - name: "INVITATION__INVITEDUSERINITIALROLES__0__USERROLENAMES__0"
-              value: "{{ .Values.backend.administration.invitation.invitedUserInitialRoles.role0 }}"
+              value: "{{ .Values.backend.processesworker.invitation.invitedUserInitialRoles.role0 }}"
             - name: "INVITATION__REGISTRATIONAPPADDRESS"
               value: "{{ .Values.portalAddress }}{{ .Values.backend.registration.portalRegistrationPath }}"
             - name: "INVITATION__PASSWORDRESENDADDRESS"
               value: "{{ .Values.portalAddress }}{{ .Values.backend.portalPasswordResendPath }}"
             - name: "INVITATION__INITIALLOGINTHEME"
-              value: "{{ .Values.backend.administration.invitation.initialLoginTheme }}"
-            - name: "INVITATION__ENCRYPTIONKEY"
+              value: "{{ .Values.backend.processesworker.invitation.initialLoginTheme }}"
+            - name: "INVITATION__ENCRYPTIONCONFIGINDEX"
+              value: "{{ .Values.backend.processesworker.invitation.encryptionConfigIndex }}"
+            - name: "INVITATION__ENCRYPTIONCONFIGS__0__INDEX"
+              value: "{{ .Values.backend.processesworker.invitation.encryptionConfigs.index0.index }}"
+            - name: "INVITATION__ENCRYPTIONCONFIGS__0__ENCRYPTIONKEY"
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.backend.interfaces.secret }}"
-                  key: "mailing-process-encryption-key0"
+                  key: "invitation-encryption-key0"
+            - name: "INVITATION__ENCRYPTIONCONFIGS__0__CIPHERMODE"
+              value: "{{ .Values.backend.processesworker.invitation.encryptionConfigs.index0.cipherMode }}"
+            - name: "INVITATION__ENCRYPTIONCONFIGS__0__PADDINGMODE"
+              value: "{{ .Values.backend.processesworker.invitation.encryptionConfigs.index0.paddingMode }}"
             ports:
             - name: http
               containerPort: {{ .Values.portContainer }}
