--- a/consortia/argocd-app-templates/appsetup-stable.yaml
+++ b/consortia/argocd-app-templates/appsetup-stable.yaml
@@ -238,9 +238,19 @@ spec:
                   clientId: "<path:portal/data/processes-worker#offerprovider-client-id>"
                   clientSecret: "<path:portal/data/stable/processes-worker#offerprovider-client-secret>"
                 onboardingServiceProvider:
-                  encryptionKey: "<path:portal/data/stable/processes-worker#process-onboardingserviceprovider-encryption-key>"
-                mailingProcess:
-                  encryptionKey: "<path:portal/data/stable/processes-worker#mailing-process-encryption-key0>"
+                  encryptionConfigs:
+                    index0:
+                      encryptionKey: "<path:portal/data/stable/processes-worker#onboardingserviceprovider-encryption-key0>"
+                    index1:
+                      encryptionKey: "<path:portal/data/stable/processes-worker#onboardingserviceprovider-encryption-key1>"
+                dim:
+                  encryptionConfigs:
+                    index0:
+                      encryptionKey: "<path:portal/data/stable/processes-worker#dim-encryption-key0>"
+                invitation:
+                  encryptionConfigs:
+                    index0:
+                      encryptionKey: "<path:portal/data/stable/processes-worker#invitation-encryption-key0>"
 
             postgresql:
               auth:
