--- a/consortia/environments/values-pen.yaml
+++ b/consortia/environments/values-pen.yaml
@@ -247,11 +247,11 @@ backend:
       didDocumentBaseLocation: ""
       encryptionConfigs:
         index0:
-          encryptionKey: "<path:portal/data/pen/processes-worker#dimwalletcreation-encryption-key0>"
-    mailingProcess:
+          encryptionKey: "<path:portal/data/pen/processes-worker#dim-encryption-key0>"
+    invitation:
       encryptionConfigs:
         index0:
-          encryptionKey: "<path:portal/data/pen/processes-worker#mailing-process-encryption-key0>"
+          encryptionKey: "<path:portal/data/pen/processes-worker#invitation-encryption-key0>"
 
 postgresql:
   auth:
