--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -865,7 +865,17 @@ backend:
           index: 0
           cipherMode: "CBC"
           paddingMode: "PKCS7"
-          # -- EncryptionKey to encrypt the invitation password. Secret-key 'invitation-encryption-key0'.
+          # -- EncryptionKey to encrypt the company-invitation client-secret. Secret-key 'invitation-encryption-key0'.
+          # Expected format is 256 bit (64 digits) hex.
+          encryptionKey: ""
+    mailing:
+      encryptionConfigIndex: 0
+      encryptionConfigs:
+        index0:
+          index: 0
+          cipherMode: "CBC"
+          paddingMode: "PKCS7"
+          # -- EncryptionKey to encrypt the parameters of mailing processes. Secret-key 'mailing-encryption-key0'.
           # Expected format is 256 bit (64 digits) hex.
           encryptionKey: ""
   clients:
