--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -419,6 +419,19 @@ spec:
               value: "{{ .Values.backend.processesworker.invitation.encryptionConfigs.index0.cipherMode }}"
             - name: "INVITATION__ENCRYPTIONCONFIGS__0__PADDINGMODE"
               value: "{{ .Values.backend.processesworker.invitation.encryptionConfigs.index0.paddingMode }}"
+            - name: "MAILINGPROCESSCREATION__ENCRYPTIONCONFIGINDEX"
+              value: "{{ .Values.backend.processesworker.mailing.encryptionConfigIndex }}"
+            - name: "MAILINGPROCESSCREATION__ENCRYPTIONCONFIGS__0__INDEX"
+              value: "{{ .Values.backend.processesworker.mailing.encryptionConfigs.index0.index }}"
+            - name: "MAILINGPROCESSCREATION__ENCRYPTIONCONFIGS__0__ENCRYPTIONKEY"
+              valueFrom:
+                secretKeyRef:
+                  name: "{{ .Values.backend.interfaces.secret }}"
+                  key: "mailing-encryption-key0"
+            - name: "MAILINGPROCESSCREATION__ENCRYPTIONCONFIGS__0__CIPHERMODE"
+              value: "{{ .Values.backend.processesworker.mailing.encryptionConfigs.index0.cipherMode }}"
+            - name: "MAILINGPROCESSCREATION__ENCRYPTIONCONFIGS__0__PADDINGMODE"
+              value: "{{ .Values.backend.processesworker.mailing.encryptionConfigs.index0.paddingMode }}"
             ports:
             - name: http
               containerPort: {{ .Values.portContainer }}
