--- a/consortia/argocd-app-templates/appsetup-stable.yaml
+++ b/consortia/argocd-app-templates/appsetup-stable.yaml
@@ -251,6 +251,10 @@ spec:
                   encryptionConfigs:
                     index0:
                       encryptionKey: "<path:portal/data/stable/processes-worker#invitation-encryption-key0>"
+                mailing:
+                  encryptionConfigs:
+                    index0:
+                      encryptionKey: "<path:portal/data/stable/processes-worker#mailing-encryption-key0>"
 
             postgresql:
               auth:
