--- a/consortia/environments/values-pen.yaml
+++ b/consortia/environments/values-pen.yaml
@@ -252,6 +252,10 @@ backend:
       encryptionConfigs:
         index0:
           encryptionKey: "<path:portal/data/pen/processes-worker#invitation-encryption-key0>"
+    mailing:
+      encryptionConfigs:
+        index0:
+          encryptionKey: "<path:portal/data/pen/processes-worker#mailing-encryption-key0>"
 
 postgresql:
   auth:
