--- a/charts/portal/templates/deployment-frontend-portal.yaml
+++ b/charts/portal/templates/deployment-frontend-portal.yaml
@@ -62,6 +62,14 @@ spec:
             value: "{{ .Values.semanticsAddress }}"
           - name: MANAGED_IDENTITY_WALLETS_NEW_URL
             value: "{{ .Values.custodianAddress }}"
+          - name: REALM
+            value: "{{ .Values.authRealm }}{{ .Values.backend.keycloak.authRealm }}"
+          - name: CLIENT_ID
+            value: "{{ .Values.clientId }}{{ .Values.backend.clients.portal }}"
+          - name: CLIENT_ID_SEMANTIC
+            value: "{{ .Values.clientIdSemantic }}{{ .Values.backend.clients.semantic }}"
+          - name: CLIENT_ID_MIW
+            value: "{{ .Values.clientIdMiw }}{{ .Values.backend.clients.miw }}"
         ports:
         - name: http
           containerPort: {{ .Values.portContainer }}
